# sflasher

./: Cargo.toml  README.md  build.rs
.github/workflows/: backend.yml
src/: cli.rs  constants.rs  devices.rs  error.rs  firmware.rs  flash.rs  main.rs  traits.rs
src/traits/: buffer.rs  empty.rs  hex.rs  len.rs
