[package]
name = "sflasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
hex = "0.4.3"
hidapi = { version = "2.0.2", features = ["macos-shared-device"] }
itertools = "0.10.5"
main_error = "0.1.2"
once_cell = "1.16.0"
paste = "1.0.11"
thiserror = "1.0.38"

[build-dependencies]
clap = { version = "4.0.30", features = ["derive"] }
clap_complete = "4.0.7"

[features] 
backtrace = []
debug = ["backtrace"]
